Adding the modified tutorial notebook (#169)
* Adding the modified tutorial notebook.

* Adding instructions on how to edit a product via API

* Adding instructions to remove file and delete product

* Update notebook text cells:

  - pz-server.linea.org.br (old) -> pzerver.linea.org.br
  - replace TSM cycle figure for the same with higher resolution
  - update last run date
  - include Luigi's name as contributor

---------

Co-authored-by: julia <julia@linea.org.br>

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "# **Photo-z Server** <br> Tutorial Notebook\n",
     "\n",
-    "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br) <br>\n",
-    "Last verified run: **2025-Jan-07**"
+    "Contributors: Luigi Silva <br> \n",
+    "Last verified run: **2025-Jun-17**"
    ]
   },
   {
@@ -57,11 +57,11 @@
     "\n",
     "### About the PZ Server \n",
     "\n",
-    "The Photo-z (PZ) Server is an online service for the LSST Community to host and share lightweight PZ-related data products. The upload and download of data and metadata can be done at the website  [pz-server.linea.org.br](https://pz-server.linea.org.br/)$^{\\dagger}$. There, you will find two pages containing a list of data products each: one for official data products distributed by Rubin Observatory's Data Management department and the other for user-generated data products.\n",
+    "The Photo-z (PZ) Server is an online service for the LSST Community to host and share lightweight PZ-related data products. The upload and download of data and metadata can be done at the website  [pzserver.linea.org.br](https://pzserver-dev.linea.org.br/)$^{\\dagger}$. There, you will find two pages containing a list of data products each: one for official data products distributed by Rubin Observatory's Data Management department and the other for user-generated data products.\n",
     "\n",
     "The PZ Server is developed and delivered by LIneA as part of the in-kind contribution program BRA-LIN to the Rubin Observatory. The service is hosted in the Brazilian IDAC, with access authorized to the LSST Community through [Rubin Science Platform (RSP)](https://data.lsst.cloud/) login credentials. For more information about other contributions from BRA-LIN, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). \n",
     "\n",
-    "$^{\\dagger}$ During the development phase, a test environment is available at [pz-server-dev.linea.org.br](https://pz-server-dev.linea.org.br/)."
+    "$^{\\dagger}$ During the development phase, a test environment is available at [pzserver-dev.linea.org.br](https://pzserver-dev.linea.org.br/)."
    ]
   },
   {
@@ -70,7 +70,7 @@
    "source": [
     "### How to upload a data product on the PZ Server website\n",
     "\n",
-    "To upload a data product, click the button **NEW PRODUCT** on the top left of the [User-generated Data Products page](https://pz-server-dev.linea.org.br/user_products) \n",
+    "To upload a data product, click the button **NEW PRODUCT** on the top right of the [User-generated Data Products page](https://pzserver-dev.linea.org.br/user_products) \n",
     "\n",
     "\n",
     "<center>\n",
@@ -138,7 +138,7 @@
    },
    "outputs": [],
    "source": [
-    "! pip install pzserver==0.2.7"
+    "! pip install pzserver"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A class `PzServer` object connects with the PZ Server back-end. To get authorization to define an instance of `PzServer`, users must provide an API Token generated in the menu at the top right corner of the [PZ Server website](https://pz-server.linea.org.br/). "
+    "A class `PzServer` object connects with the PZ Server back-end. To get authorization to define an instance of `PzServer`, users must provide an API Token generated in the menu at the top right corner of the [PZ Server website](https://pzserver.linea.org.br/). "
    ]
   },
   {
@@ -190,16 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-01-08T15:05:56.967021Z",
-     "iopub.status.busy": "2025-01-08T15:05:56.966109Z",
-     "iopub.status.idle": "2025-01-08T15:05:56.970327Z",
-     "shell.execute_reply": "2025-01-08T15:05:56.969639Z",
-     "shell.execute_reply.started": "2025-01-08T15:05:56.966975Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#pz_server = PzServer(token=\"<your token here>\", host=\"pz-dev\") "
@@ -224,7 +216,7 @@
    "source": [
     "#with open('token.txt', 'r') as file:\n",
     "#    token = file.read()\n",
-    "#pz_server = PzServer(token=token, host='pz-dev') # 'pz-dev' is the temporary host during the test phase, then it will be just 'pz'  "
+    "#pz_server = PzServer(token=token, host='pz-dev') # 'pz-dev' is the temporary host during the test phase, then it will be just 'pz' (default)  "
    ]
   },
   {
@@ -371,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How to upload a data product to via Python API (alternative method)  "
+    "### How to upload a data product to PZ Server via Python API (alternative method)"
    ]
   },
   {
@@ -395,6 +387,7 @@
     "    \"release\": None, # LSST release, use None if not LSST data \n",
     "    \"main_file\": \"upload_example.csv\", # full path \n",
     "    \"auxiliary_files\": [\"upload_example.html\", \"upload_example.ipynb\"] # full path\n",
+    "    #\"auxiliary_files\": [] # you must give a empty list if you don't have any auxiliary_files\n",
     "}"
    ]
   },
@@ -415,6 +408,217 @@
    "source": [
     "product_id = upload.product_id\n",
     "product_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After an upload object is created, you can also add auxiliary files before saving."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upload.add_auxiliary_file(\"upload_example.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To save your product in PZ Server, you must give the columns names of your data. For a specz catalog, for example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = {\n",
+    "    \"<your-RA-column-name>\": \"RA\",\n",
+    "    \"<your-Dec-column-name>\": \"Dec\",\n",
+    "    \"<your-z-column-name>\": \"z\"\n",
+    "}\n",
+    "\n",
+    "upload.make_columns_association(columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, you can finally save it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upload.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to edit an existing product via Python API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To do any modification to an existing product, first you need to define the product object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "po = pz_server.get_product_object(product_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see the attributes of this product."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "po.attributes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Adding an auxiliary file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can add an auxiliary file and/or description file, given their paths."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "po.attach_auxiliary_file(path_to_auxiliary_file)\n",
+    "po.attach_description_file(path_to_description_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, you can check if the uploads were done correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "po.get_auxiliary_files()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "po.get_description_files()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Updating the description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also upddate the product description as shown in pzserver."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "po.update_description(\"test update description\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Deleting a single file of the product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To delete a single file of the product, you must give the file id to the ```remove_file``` method. Be careful, it is the file id, not the product id."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "po.remove_file(file_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Deleting a full product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To delete the product with all its files (main and auxiliary), you can use the method ```delete_product```. **BE CAREFUL! THIS CAN'T BE UNDONE!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.delete_product(product_id)"
    ]
   },
   {
@@ -480,15 +684,15 @@
     "\n",
     "All data products uploaded to the PZ Server are immediately available and visible to all PZ Server users (people with RSP credentials) through the PZ Server website or Python library. One way to share a data product is by providing the product's URL, which leads to the product's download page. The URL is composed by the PZ Server website address + **/products/** + **internal_name**:\n",
     "\n",
-    "https://pz-server.linea.org.br/product/ + **id**\n",
+    "https://pzserver.linea.org.br/product/ + **id**\n",
     "\n",
     "or \n",
     "\n",
-    "https://pz-server.linea.org.br/product/ + **internal_name** \n",
+    "https://pzserver.linea.org.br/product/ + **internal_name** \n",
     "\n",
     "<font color=green> WARNING: if still in the development phase, the URL works only with the **complete internal name**: </font> \n",
     "\n",
-    "https://pz-server<font color=red>-dev</font>.linea.org.br/product/ + **internal_name**\n",
+    "https://pzserver<font color=red>-dev</font>.linea.org.br/product/ + **internal_name**\n",
     "\n",
     "\n",
     "For example, for the data just uploaded above:"
@@ -501,7 +705,7 @@
    "outputs": [],
    "source": [
     "internal_name = pz_server.get_product_metadata(product_id)['internal_name']\n",
-    "url = f'https://pz-server-dev.linea.org.br/product/{internal_name}'\n",
+    "url = f'https://pzserver-dev.linea.org.br/product/{internal_name}'\n",
     "url"
    ]
   },
@@ -879,8 +1083,7 @@
     "\n",
     "In addition to PZ-related data hosting and curation services, PZ Server also provides tools to help users prepare training data for PZ algorithms. The pipeline *Training Set Maker* uses the data partitioning method [HATS](https://hats.readthedocs.io/en/stable/) and the Python framework [LSDB](https://docs.lsdb.io/en/stable/) (both developed by [LINCC](https://lsstdiscoveryalliance.org/programs/lincc/)) as cross-matching back-end engine, coupled with a user interface on the PZ Server website plugged to the IDAC-Brazil's high-performance computing infrastructure. With *Training Set Maker*, users can create training sets by matching objects from one given spec-z catalog available in the server with objects from an LSST Object catalog. In a previous step, the spec-z catalog might have been prepared as a combination of spectroscopic redshift measurements from different sources grouped into a single catalog with the pipeline *Combine Spec-z Catalogs*. \n",
     "\n",
-    "<img src='./images/TSMcycle.png'/>\n",
-    "\n",
+    "<img src=\"./images/tsm.png\" width=\"600\" style=\"display: block; margin: auto;\" />\n",
     "\n",
     "Both pipelines are executed as asynchronous processes triggered from the PZ Server website or directly from Python scripts using the `pzserver` library, and the outputs are automatically registered as new data products. See below for an example of how to use them.     "
    ]
@@ -1443,9 +1646,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LSST",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "lsst"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1457,7 +1660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.10"
   },
   "nbsphinx": {
    "execute": "never"
