--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br) <br>\n",
     "Contributors: Luigi Silva, Cristiano Singulani <br> \n",
-    "Last verified run: **2025-Jul-09**"
+    "Last verified run: **2025-Jul-11**"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pz_server = PzServer(token=\"<your token here>\") "
+    "# pz_server = PzServer(token=\"<your token here>\") "
    ]
   },
   {
@@ -170,25 +170,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with open('token.txt', 'r') as file:\n",
+    "# with open('token.txt', 'r') as file:\n",
     "#    token = file.read()\n",
-    "#pz_server = PzServer(token=token)"
+    "# pz_server = PzServer(token=token)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic methods: query general info\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Basic methods: query general info\n",
+    "\n",
     "The object `pz_server` created above can provide access to data and metadata stored in the PZ Server. It also brings additional methods for users to navigate through the available content. The methods with the prefix `get_` return the result of a query on the PZ Server database as a Python dictionary and are most useful to be used programmatically (see details on the [API documentation page](https://linea-it.github.io/pzserver/html/index.html)). Alternatively, those with the prefix `display_` show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html), optimized for Jupyter Notebook (note: column names might change in the display version). \n",
     "\n",
-    "For instance,\n",
+    "For instance:\n",
     "\n",
     "display the list of product types supported with a short description, "
    ]
@@ -243,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The information about product type, users, and releases shown above can be used to filter the data products of interest for your search. For that, the method `list_products` receives as an argument a dictionary mapping the product's attributes to their values. "
+    "The information about product type, users, and releases shown above can be used to filter the data products of interest for your search. For that, the method `display_products_list` receives as an argument a dictionary mapping the product's attributes to their values. "
    ]
   },
   {
@@ -262,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It also works if we type a string pattern that is part of the value. For instance, just \"DP0\" instead of \"DP0.2\": "
+    "It also works if we type a string pattern that is part of the value."
    ]
   },
   {
@@ -273,33 +268,14 @@
    },
    "outputs": [],
    "source": [
-    "pz_server.display_products_list(filters={\"release\": \"DP1\"})"
+    "pz_server.display_products_list(filters={\"product_type\": \"estimates\"})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It also allows the search for multiple strings by adding the suffix `__or` (two underscores + \"or\") to the search key. For instance, to get spec-z catalogs and training sets in the same search (notice that filtering is not case-sensitive):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "pz_server.display_products_list(filters={\"product_type__or\": [\"Spec-z Catalog\", \"training set\"]})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To fetch the results of a search and attribute to a variable, just change the prefix `display_` by `get_`, like this:  "
+    "To fetch the results of a search and attribute to a variable, just change the prefix `display_` by `get_`:  "
    ]
   },
   {
@@ -320,22 +296,15 @@
    "metadata": {},
    "source": [
     "## Data products: access data and display metadata\n",
-    "### Display the metadata of a data product    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The metadata of a given data product is the information the user provides on the upload form. This information is attached to the data product contents and is available for consulting on the PZ Server page or using this Python API (`pzserver`). \n",
     "\n",
-    "All data products stored on PZ Server are identified by a unique **id** number or a unique name, a _string_ called **internal_name**, which is created automatically at the moment of the upload by concatenating the product **id** to the name given by its owner (replacing blank spaces by \"_\", lowering cases, and removing special characters). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<font size=4>**product_id** and **internal_name**</font>\n",
+    "\n",
+    "All data products stored on PZ Server are identified by its unique **product_id** number or its **internal_name**, which is created automatically at the moment of the upload by concatenating the **product_id** to the name given by its owner (replacing blank spaces by \"_\", lowering cases, and removing special characters) (e.g.: `30_simple_training_set`). \n",
+    "\n",
+    "<font size=4>Display the metadata of a data product</font>\n",
+    "\n",
+    "The metadata of a given data product is all the information available about it, including what the user provided on the upload form. \n",
+    "\n",
     "The `PzServer`'s method `get_product_metadata()` returns a dictionary with the attibutes stored in the PZ Server about a given data product identified by its **id** or **internal_name**. For use in a Jupyter notebook, the equivalent `display_product_metadata()` shows the results in a formated table."
    ]
   },
@@ -345,6 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "product_id = 30\n",
     "pz_server.display_product_metadata(product_id)"
    ]
   },
@@ -352,14 +322,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download data products as .zip files   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To download any data product stored in the PZ Server, use the `PzServer`'s method `download_product` informing the product's **internal_name** and the path to where it will be saved (the default is the current folder). This method downloads a compressed .zip file, which contains all the files uploaded by the user, including data, ancillary files, and description files. Let's try it with a small data product. "
+    "<font size=4>Download data products as .zip files*</font>\n",
+    "\n",
+    "To download any data product stored in the PZ Server, use the method `download_product` informing the **product_id** or **internal_name** and the path to where it will be saved (the default is the current folder). This method downloads a compressed .zip file, which contains all the files uploaded by the user, including data, auxiliary files, and description files. Let's try it with a small data product. "
    ]
   },
   {
@@ -375,10 +340,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- \n",
-    "### Retrieve contents of data products (work on memory)\n",
+    "<font size=4>Retrieve contents of data products (work on memory)</font> \n",
     "\n",
-    "Instead of downloading the files, the `pzserver` library also allows users to retrieve the contents of a given data product to work on memory using the method `get_product()`. This feature is available only for tabular data (product types: **Spec-z Catalog**, **Training Set**, and **Photo-z Table**). \n",
+    "\n",
+    "########################################################333\n",
+    "\n",
+    "PAREI AQUI\n",
+    "\n",
+    "#############################################################\n",
+    "\n",
+    "\n",
+    "\n",
+    "Instead of downloading the files, the `pzserver` library also allows users to retrieve the contents of a given data product to work on memory using the method `get_product()`. This feature is available only for tabular data, such as redshift catalogs and training sets.\n",
     "\n",
     "By default, the method `get_product` returns an object from a particular class, depending on the product's type. The classes `SpeczCatalog` and `TrainingSet` are simple extensions of `pandas.DataFrame` (via class composition) with a couple of additional attributes and methods, such as the attribute `metadata`, and the method `display_metadata()`. Let's see an example: "
    ]
@@ -389,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog = pz_server.get_product(product_id)\n",
+    "catalog = pz_server.get_product(2)\n",
     "catalog"
    ]
   },
@@ -1628,9 +1601,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LSST",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "lsst"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1642,7 +1615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.10"
   },
   "nbsphinx": {
    "execute": "never"
