--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -383,7 +383,7 @@
    "source": [
     "data_to_upload = {\n",
     "    \"name\":\"example upload via lib\",\n",
-    "    \"product_type\": \"specz_catalog\",  # Product type \n",
+    "    \"product_type\": \"redshift_catalog\",  # Product type \n",
     "    \"release\": None, # LSST release, use None if not LSST data \n",
     "    \"main_file\": \"upload_example.csv\", # full path \n",
     "    \"auxiliary_files\": [\"upload_example.html\", \"upload_example.ipynb\"] # full path\n",
@@ -423,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "upload.add_auxiliary_file(\"upload_example.txt\")"
+    "upload.add_auxiliary_file(\"upload_example.html\")"
    ]
   },
   {
@@ -439,10 +439,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# For reference:\n",
+    "#columns = {\n",
+    "#    \"<your-RA-column-name>\": \"RA\",\n",
+    "#    \"<your-Dec-column-name>\": \"Dec\",\n",
+    "#    \"<your-z-column-name>\": \"z\"\n",
+    "#}\n",
+    "\n",
     "columns = {\n",
-    "    \"<your-RA-column-name>\": \"RA\",\n",
-    "    \"<your-Dec-column-name>\": \"Dec\",\n",
-    "    \"<your-z-column-name>\": \"z\"\n",
+    "    \"RA\": \"RA\",\n",
+    "    \"DEC\": \"Dec\",\n",
+    "    \"Z\": \"z\"\n",
     "}\n",
     "\n",
     "upload.make_columns_association(columns)"
@@ -523,8 +530,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "po.attach_auxiliary_file(path_to_auxiliary_file)\n",
-    "po.attach_description_file(path_to_description_file)"
+    "po.attach_auxiliary_file(\"upload_example.html\")\n",
+    "po.attach_description_file(\"upload_example.html\")"
    ]
   },
   {
@@ -595,6 +602,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# You can see the file id using po.get_auxiliary_files() or po.get_description_files()\n",
+    "file_id = po.get_auxiliary_files()[0]['id']\n",
     "po.remove_file(file_id)"
    ]
   },
@@ -1646,9 +1655,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "LSST",
    "language": "python",
-   "name": "python3"
+   "name": "lsst"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1660,7 +1669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   },
   "nbsphinx": {
    "execute": "never"
