--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -115,10 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "from pzserver import PzServer \n",
-    "#import matplotlib.pyplot as plt\n",
-    "#%reload_ext autoreload \n",
-    "#%autoreload 2"
+    "from pzserver import PzServer "
    ]
   },
   {
@@ -141,7 +138,7 @@
    "source": [
     "<img src=\"images/ScreenShotTokenMenu.png\" width=150pt align=\"top\"/> <img src=\"images/ScreenShotTokenGenerator.png\" width=350pt />\n",
     "\n",
-    "Uncomment the next cell and paste the API Token, replacing the placeholder below: "
+    "Paste the API Token replacing the placeholder below: "
    ]
   },
   {
@@ -150,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pz_server = PzServer(token=\"<your token here>\") "
+    "pz_server = PzServer(token=\"<your token here>\") "
    ]
   },
   {
@@ -362,8 +359,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog = pz_server.get_product(2)\n",
-    "catalog"
+    "data = pz_server.get_product(30).to_pandas()\n",
+    "data #dataframe "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
    ]
   },
   {
@@ -1615,7 +1621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   },
   "nbsphinx": {
    "execute": "never"
