change logos image source: replace local files by links

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src = \"images/linea.png\" width=140 style=\"padding: 20px\"> \n",
-    "<img align=\"left\" src = \"images/rubin.png\" width=180 style=\"padding: 30px\"> \n",
+    "<img align=\"left\" src = \"https://www.linea.org.br/brand/linea-logo-color.svg\" width=130  style=\"padding: 40px\">  \n",
+    "<img align=\"left\" src = \"https://cdn2.webdamdb.com/1280_c3PXjCZbPM23.png\" width=220> \n",
     "\n",
     "<font size=5> **Photo-z Server** Tutorial Notebook\n",
     " </font>\n",
@@ -121,9 +121,7 @@
    "source": [
     "API tokens can be reused indefinitely. However, generating a new token will automatically invalidate any previously issued one.\n",
     "\n",
-    "For convenience, you can save your API token in a text file, such as **token.txt**. This file is already included in the `.gitignore` of this repository to prevent accidental version control exposure.\n",
-    "\n",
-    "<font color=\"red\"><strong>API tokens MUST NOT be shared. Users are responsible for keeping their tokens private.</strong></font>\n"
+    "For convenience, you can save your API token in a text file, such as **token.txt**. This file is already included in the `.gitignore` of this repository to prevent accidental exposure. "
    ]
   },
   {
@@ -135,6 +133,13 @@
     "# with open('token.txt', 'r') as file:\n",
     "#    token = file.read()\n",
     "# pz_server = PzServer(token=token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"red\"><strong>API tokens MUST NOT be shared. Users are responsible for keeping their tokens private.</strong></font>"
    ]
   },
   {
