replace TSM figure by links from LIneA DOCs and change pip install arguments

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -51,7 +51,9 @@
     "\n",
     "Note 1: Depending on your Jupyter Notebook or Lab version, you might need to restart the kernel to use the newly installed library.\n",
     "\n",
-    "Note 2: If you are installing it in the RSP Notebook Aspect using the LSST kernel, you may see warnings about dependency versions. These warnings should not affect library functionality. If you encounter any issues, please contact the [PZ Server team](mailto:pzserver-admin@linea.org.br)."
+    "Note 2: If you are installing it in the RSP Notebook Aspect using the LSST kernel, you may see warnings about dependency versions. These warnings should not affect library functionality. If you encounter any issues, please contact the [PZ Server team](mailto:pzserver-admin@linea.org.br).\n",
+    "\n",
+    "Since `pzserver` is still in development, make sure to install the latest stable version and bypass any cached versions."
    ]
   },
   {
@@ -62,7 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "! pip install pzserver "
+    "pip install --upgrade --no-cache-dir pzserver"
    ]
   },
   {
@@ -101,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/ScreenShotTokenMenu.png\" width=150pt align=\"top\"/> <img src=\"images/ScreenShotTokenGenerator.png\" width=350pt />\n",
+    "<img src=\"https://docs.linea.org.br/images/pz-server-token-menu.png\" width=150pt align=\"top\"/> <img src=\"https://docs.linea.org.br/images/pz-server-generate-token.png\" width=350pt />\n",
     "\n",
     "Paste your API token by replacing the placeholder below:"
    ]
@@ -628,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/tsm.png\" width=\"600\" style=\"display: block; margin: auto;\" />\n",
+    "<img src=\"https://docs.linea.org.br/images/pz-server-tsm.png\" width=\"600\" style=\"display: block; margin: auto;\" />\n",
     "\n",
     "Both pipelines are executed as asynchronous processes triggered either from the PZ Server website or directly from Python scripts using the `pzserver` library, with the outputs automatically registered as new data products."
    ]
