--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server = PzServer(token=\"<your token here>\") "
+    "pz_server = PzServer(token=\"<your token here>\")"
    ]
   },
   {
@@ -132,9 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open('token.txt', 'r') as file:\n",
-    "#    token = file.read()\n",
-    "# pz_server = PzServer(token=token)"
+    "#with open('token-dev.txt', 'r') as file:\n",
+    "#   token = file.read()\n",
+    "#pz_server = PzServer(token=token, host=\"pz-dev\")"
    ]
   },
   {
@@ -641,9 +641,295 @@
    "source": [
     "### Combine Redshift Catalogs\n",
     "\n",
-    "<font color=\"red\">Pipeline under development.</font>\n",
+    "The pipeline **Combine Redshift Catalogs (CRC)** combines multiple redshift catalogs into a single table and registers it as a new data product on the PZ Server. It was designed to help **aggregate multiple samples from individual surveys** into a single catalog before they are associated with LSST data through spatial cross-matching.\n",
     "\n",
-    "The release will be announced on the Community Forum soon!"
+    "It **optionally deduplicates** catalog entries based on the ```z_flag_homogenized``` and ```instrument_type_homogenized``` columns, which can be automatically generated for some specific supported surveys (the ```survey_name``` column is required in this case) or manually embedded by the user in their catalogs. See the **documentation at https://docs.linea.org.br/en/sci-platforms/pz_server_crc.html** and the **currently supported automatic translations at https://github.com/linea-it/pzserver_pipelines/blob/main/combine_redshift_dedup/flags_translation.yaml**. \n",
+    "\n",
+    "> **Note:** all the **SITCOMTN-154 reference redshift catalogs are supported**, considering that they have a flag column which is quality like, that is, with float values between 0 and 1.\n",
+    "\n",
+    "On the PZ Server website, go to **PZ Server Pipelines > Combine Redshift Catalogs**, fill in the submission form with relevant metadata, such as the name for the new reference redshift catalog to be created and a short description, select the catalogs to include by marking at least two checkboxes, and press the **Run** button.\n",
+    "\n",
+    "![CRC](images/crc.png)\n",
+    "\n",
+    "Let's now see how to run the pipeline through the lib."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Start creating a ```crc``` process object instance by providing a name (string) for the new reference redshift catalog to the method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#crc = pz_server.combine_redshift_catalogs(<new product's name>)\n",
+    "crc = pz_server.combine_redshift_catalogs(\"crc_example\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(crc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check status of the ```crc``` process."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crc.check_status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crc.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View the current pipeline parameters and modify them if desired.\n",
+    "\n",
+    "> **Note:** The ```flags_translation.yaml``` file needs to be in a location that the ```app.orch``` application can access, in the LIneA storage system. We don't recommend changing it for now. More detailed instructions on how to do this will be available soon."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crc.pipeline.parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = {\n",
+    "    \"combine_type\": \"concatenate_and_mark_duplicates\", # Options: \"concatenate\", \"concatenate_and_mark_duplicates\", or \"concatenate_and_remove_duplicates\"\n",
+    "    \"flags_translation_file\": \"/data/apps/app.orch/dev/pipelines/combine_redshift_dedup/flags_translation.yaml\",\n",
+    "}\n",
+    "\n",
+    "crc.set_config(cfg)\n",
+    "crc.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, add at least two individual reference redshift ratalogs to be included in the sample using the ```append_catalog``` method. These catalogs must already exist in the PZ Server, and their internal names identify them. Let's browse the reference redshift catalogs available and choose from the list:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pz_server.display_products_list(filters={\"product_type\": \"Reference Redshift Catalog\", 'uploaded_by':'gschwend'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us add, as an example, the NED, MOSDEF and JADES spectroscopic catalogs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crc.append_catalog(480)\n",
+    "crc.append_catalog(481)\n",
+    "crc.append_catalog(482)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check the summary of ```crc``` attributes, now updated with the input catalogs added above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crc.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, use the method run to submitt the process as an asychronous job to the PZ Server's back-end."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crc.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Still during the process, we can check the ```id``` and the ```internal_name``` of the output data product with the summary method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crc.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or get it from the object ```crc```:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog_id = crc.output.get('id') \n",
+    "catalog_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog_name = crc.output.get('internal_name') \n",
+    "catalog_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check if the process is done, if the status is 'Successful', we can move on to the next cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crc.check_status()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, the new spec-z catalog named as ```crc_example``` is available to be downloaded or retrieved to memory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_new_specz_catalog = pz_server.get_product(catalog_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can convert to a pandas dataframe and inspect."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pd.set_option('display.max_rows', 10)\n",
+    "\n",
+    "my_new_specz_catalog_df = my_new_specz_catalog.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_new_specz_catalog_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_new_specz_catalog_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "my_new_specz_catalog_df.plot(x=\"ra\", y=\"dec\", kind=\"scatter\")  \n",
+    "plt.xlabel(\"R.A. (degrees)\")\n",
+    "plt.ylabel(\"Dec. (degrees)\")\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -668,20 +954,13 @@
     "\n",
     "Send your feedback to us [via email](mailto:pzserver-admin@linea.org.br), or feel free to [open an issue](https://github.com/linea-it/pzserver/issues/new) in the PZ Server library repository on GitHub.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LSST",
+   "display_name": "CONDA_ENV_pzserver_dev_editable",
    "language": "python",
-   "name": "lsst"
+   "name": "conda_env_pzserver_dev_editable"
   },
   "language_info": {
    "codemirror_mode": {
