Removing host when reading the token, and adding images for the notebook.

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -132,9 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with open('token-dev.txt', 'r') as file:\n",
+    "#with open('token.txt', 'r') as file:\n",
     "#   token = file.read()\n",
-    "#pz_server = PzServer(token=token, host=\"pz-dev\")"
+    "#pz_server = PzServer(token=token)"
    ]
   },
   {
