¨minor update im text cells¨

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -10,9 +10,9 @@
     "<font size=5> **Photo-z Server** Tutorial Notebook\n",
     " </font>\n",
     "\n",
-    "Contact author: [Julia Gschwend](mailto:julia@linea.org.br) <br>\n",
-    "Contributors: Luigi Silva, Cristiano Singulani <br> \n",
-    "Last verified run: **2025-Jul-14**"
+    "Authors: Julia Gschwend, Luigi Silva, Cristiano Singulani <br> \n",
+    "Contact: [Julia Gschwend](mailto:julia@linea.org.br) <br> \n",
+    "Last verified run: **2025-Nov-10**"
    ]
   },
   {
@@ -46,7 +46,7 @@
     "The PZ Server's Python library is available on **pip** as `pzserver`.\n",
     "\n",
     "```\n",
-    "$ pip install pzserver \n",
+    "$ pip install --upgrade --no-cache-dir pzserver\n",
     "```\n",
     "\n",
     "Note 1: Depending on your Jupyter Notebook or Lab version, you might need to restart the kernel to use the newly installed library.\n",
@@ -132,9 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with open('token.txt', 'r') as file:\n",
+    "# with open('token.txt', 'r') as file:\n",
     "#   token = file.read()\n",
-    "#pz_server = PzServer(token=token)"
+    "# pz_server = PzServer(token=token)"
    ]
   },
   {
@@ -711,7 +711,9 @@
    "source": [
     "View the current pipeline parameters and modify them if desired.\n",
     "\n",
-    "> **Note:** The ```flags_translation.yaml``` file needs to be in a location that the ```app.orch``` application can access, in the LIneA storage system. We don't recommend changing it for now. More detailed instructions on how to do this will be available soon."
+    "> **Note:** For now, the ```flags_translation.yaml``` file needs to be in a location that the ```app.orch``` application can access, in the LIneA storage system. We don't recommend changing it for now. \n",
+    "> **Future work:** Users will be able to upload customized versions ```flags_translation.yaml``` to change default's translation dictionary. More detailed instructions on how to do this will be available soon.\n",
+    " "
    ]
   },
   {
@@ -724,13 +726,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Update configuration parameters\n",
+    "\n",
+    "The deduplication options available are (`combine_type`): \n",
+    "- `concatenate`\n",
+    "- `concatenate_and_mark_duplicates`\n",
+    "- `concatenate_and_remove_duplicates`\n",
+    "  \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "cfg = {\n",
-    "    \"combine_type\": \"concatenate_and_mark_duplicates\", # Options: \"concatenate\", \"concatenate_and_mark_duplicates\", or \"concatenate_and_remove_duplicates\"\n",
+    "    \"combine_type\": \"concatenate_and_mark_duplicates\",\n",
     "    \"flags_translation_file\": \"/data/apps/app.orch/dev/pipelines/combine_redshift_dedup/flags_translation.yaml\",\n",
     "}\n",
     "\n",
@@ -753,14 +768,14 @@
    },
    "outputs": [],
    "source": [
-    "pz_server.display_products_list(filters={\"product_type\": \"Reference Redshift Catalog\", 'uploaded_by':'gschwend'})"
+    "pz_server.display_products_list(filters={\"product_type\": \"Reference Redshift Catalog\"})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us add, as an example, the NED, MOSDEF and JADES spectroscopic catalogs."
+    "Let us add, as an example, the 2dFGRS, 6dFGS and NED spectroscopic catalogs."
    ]
   },
   {
@@ -769,9 +784,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crc.append_catalog(480)\n",
-    "crc.append_catalog(481)\n",
-    "crc.append_catalog(482)"
+    "crc.append_catalog(60) # 2dFGRS \n",
+    "crc.append_catalog(64) # 6dFGS \n",
+    "crc.append_catalog(70) # NED "
    ]
   },
   {
@@ -869,7 +884,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, the new spec-z catalog named as ```crc_example``` is available to be downloaded or retrieved to memory:"
+    "The possible values for the process status are *Pending*, *Queued*, *Running*, *Successful*, and *Failed*.  \n",
+    "If the status is *Failed*, please contact the Photo-z Server administrators at **helpdesk@linea.org.br**.  \n",
+    "\n",
+    "Once the status changes to *Successful*, the new redshift catalog named ```crc_example``` becomes available for download or can be directly retrieved into memory."
    ]
   },
   {
@@ -879,6 +897,15 @@
    "outputs": [],
    "source": [
     "my_new_specz_catalog = pz_server.get_product(catalog_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(my_new_specz_catalog)"
    ]
   },
   {
@@ -952,15 +979,22 @@
     "\n",
     "Did you find a bug? Is something important missing?\n",
     "\n",
-    "Send your feedback to us [via email](mailto:pzserver-admin@linea.org.br), or feel free to [open an issue](https://github.com/linea-it/pzserver/issues/new) in the PZ Server library repository on GitHub.\n"
+    "Send your feedback to us [via email](mailto:helpdesk@linea.org.br), or feel free to [open an issue](https://github.com/linea-it/pzserver/issues/new) in the PZ Server library repository on GitHub.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CONDA_ENV_pzserver_dev_editable",
+   "display_name": "Python (pzserver-dev)",
    "language": "python",
-   "name": "conda_env_pzserver_dev_editable"
+   "name": "pzserver-dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -972,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.12"
   },
   "nbsphinx": {
    "execute": "never"
